--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: BY Blog
 SEOTitle:  一个勤奋向上的boy | BY Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: ling16852@gmail.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 一个勤奋向上的boy, loye168, Panyne, Java, Spring, Wechar开发"
 url: "http://loye168.github.io"          # your host, for absolute URL
