--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/timg.jpg     # use absolute URL, seeing it's used in both `
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     loye168
+zhihu_username:     xboy
 github_username:    loye168
 #twitter_username:   qiubaiying
 
