--- a/_config.yml
+++ b/_config.yml
@@ -63,8 +63,8 @@ gitalk:
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
   repo: loye168.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  owner: loye168    #github用户名
+  admin: loye168
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
